...

@Composable
private fun DeliveryField(
    value: String,
    event: (String) -> CheckoutUiEvent,
    label: Int,
    tag: String,
    error: CheckoutUiText?,
    enabled: Boolean,
    onEvent: (CheckoutUiEvent) -> Unit
) {
    ConsumaTextField(
        value,
...
